# Cook

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20aeae09ef25_add_steps_and_embed_html.py  39f972621a72_add_recipe_tags.py  4a7471a4841e_add_calorie_level_protein_source.py  55872d519587_add_user_id_to_tables.py  7948834e4b97_initial_schema.py  a1b2c3d4e5f6_add_cuisine.py  b3e1f8a2d094_add_meal_type.py  da16d2003e30_add_is_favorited.py  e5f3a2b1c8d4_add_albums.py  f2c9d4e7b1a8_add_planner_and_cooking_log.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: albums.py  cooking_log.py  grocery_list.py  ingest.py  inventory.py  planner.py  profile.py  recipes.py  stats.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py
backend/app/services/ai/: avatar_generator.py  ingredient_normalizer.py  recipe_extractor.py
backend/app/services/ingestion/: instagram_playwright.py  platform_detector.py  thumbnail_storage.py  tiktok_oembed.py
backend/app/services/inventory/: __init__.py
backend/scripts/: backfill_cuisine.py
backend/tests/: test_health.py  test_ingredient_normalizer.py  test_platform_detector.py  test_recipe_extractor.py  test_tiktok_oembed.py
docs/: ai_prompts.md  api_contract.md  architecture.md  data_model.md  product_spec.md
infra/: docker-compose.yml
ios/: README.md
ios/Cook/Cook/: CachedAsyncImage.swift  Config.swift  ContentView.swift  CookApp.swift  (+5 more)
ios/Cook/Cook.xcodeproj/: project.pbxproj
(+27 files in other folders)
